It takes too many extra clicks to change selection between bones and objects #61117

Closed
opened 2019-02-01 23:39:48 +01:00 by msalv · 7 comments

Blender Version
Broken: blender-2.80.0-git.552b2287db86-windows64
Worked: 2.79

Description of the error and steps

It takes one extra click on each case to change selection between an object and bone and viceversa.

In 2.8, with Lock Object Modes turned off, this scenario takes 6 Clicks in total. It works like this:

  • One click on BoneA puts you into Pose mode, but if another bone was selected you have to click on BoneA again. From Pose mode, one click on an Object puts you into Object mode, but it doesn't select the objecet, the armature is selected instead, so you have to click the object again. Now click on BoneB and youll be back in pose mode, except BoneA will be selected from your last time in pose mode, so you need an extra click. *

In 2.79 the same scenario takes 3 Clicks in total. It worked like this:

  • From Object mode, one click on BoneA selects BoneA putting you into Pose mode directly, one click on an Object selects that object alone and puts you in back Object mode, a click on BoneB selects BoneB, and only BoneB, not the previously selected BoneA, and puts you into Pose mode again.

Try it with this file in 2.79 and then in 2.8
bug10.blend

**Blender Version** Broken: blender-2.80.0-git.552b2287db86-windows64 Worked: 2.79 **Description of the error and steps** It takes one extra click on each case to change selection between an object and bone and viceversa. In 2.8, with **Lock Object Modes** turned **off,** this scenario takes **6 Clicks in total**. It works like this: - One click on BoneA puts you into Pose mode, but if another bone was selected you have to click on BoneA again. From Pose mode, one click on an Object puts you into Object mode, but it doesn't select the objecet, the armature is selected instead, so you have to click the object again. Now click on BoneB and youll be back in pose mode, except BoneA will be selected from your last time in pose mode, so you need an extra click. * In 2.79 the same scenario takes **3 Clicks in total**. It worked like this: - From Object mode, one click on BoneA selects BoneA putting you into Pose mode directly, one click on an Object selects that object alone and puts you in back Object mode, a click on BoneB selects BoneB, and only BoneB, not the previously selected BoneA, and puts you into Pose mode again. Try it with this file in 2.79 and then in 2.8 [bug10.blend](https://archive.blender.org/developer/F6479358/bug10.blend)
Author

Added subscriber: @moisessalvador

Added subscriber: @moisessalvador
Brecht Van Lommel was assigned by Sebastian Parborg 2019-02-04 11:32:08 +01:00
Brecht Van Lommel removed their assignment 2019-02-04 12:18:08 +01:00
Campbell Barton was assigned by Brecht Van Lommel 2019-02-04 12:18:08 +01:00

Added subscriber: @brecht

Added subscriber: @brecht
Author

Any updates on this?

Any updates on this?

Looking into this at the moment, relates to #66949

Looking into this at the moment, relates to #66949

There was a change in 2.8x that makes selecting bones only work on the active object. You can't select an armature and bone at the same time.

Changing this is simple, however this is a fairly big change to make so close to release, see patch:

diff --git a/source/blender/draw/intern/draw_armature.c b/source/blender/draw/intern/draw_armature.c
index f97efa9aed9..657bf81e469 100644
--- a/source/blender/draw/intern/draw_armature.c
+++ b/source/blender/draw/intern/draw_armature.c
@@ -1992,7 +1992,7 @@ static void draw_armature_pose(Object *ob, const float const_color[4])
 
   *if (!(base->flag & OB_FROMDUPLI))* TODO
   {
-    if ((draw_ctx->object_mode & OB_MODE_POSE) || (ob == draw_ctx->object_pose)) {
+    if (ob->mode & OB_MODE_POSE) {
       arm->flag |= ARM_POSEMODE;
     }
 

This check probably needs to also skip dupli/set-scene objects for eg.

There was a change in 2.8x that makes selecting bones only work on the active object. You can't select an armature and bone at the same time. Changing this is simple, however this is a fairly big change to make so close to release, see patch: ``` diff --git a/source/blender/draw/intern/draw_armature.c b/source/blender/draw/intern/draw_armature.c index f97efa9aed9..657bf81e469 100644 --- a/source/blender/draw/intern/draw_armature.c +++ b/source/blender/draw/intern/draw_armature.c @@ -1992,7 +1992,7 @@ static void draw_armature_pose(Object *ob, const float const_color[4]) *if (!(base->flag & OB_FROMDUPLI))* TODO { - if ((draw_ctx->object_mode & OB_MODE_POSE) || (ob == draw_ctx->object_pose)) { + if (ob->mode & OB_MODE_POSE) { arm->flag |= ARM_POSEMODE; } ``` This check probably needs to also skip dupli/set-scene objects for eg.

This issue was referenced by 0b4c0472a3

This issue was referenced by 0b4c0472a3aac40a77ea97485755bc79880d80b9

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61117
No description provided.