Fix T61117: Selecting an armature doesn't select the bone

Regression from 2.7x caused by 28dfc47cf0b06